--- a/docs/mobile-sdk/integration-guide/android-integration-guide.mdx
+++ b/docs/mobile-sdk/integration-guide/android-integration-guide.mdx
@@ -7,16 +7,16 @@ id: mobile-sdk-integration-guide-android
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
-import Android1 from "./assets/img/android-01.png";
-import Android2 from "./assets/img/android-02.png";
-import Android3 from "./assets/img/android-03.png";
-import Android4 from "./assets/img/android-04.png";
-import Android5 from "./assets/img/android-05.png";
-import Android6 from "./assets/img/android-06.png";
-import Android7 from "./assets/img/android-07.png";
-import Android8 from "./assets/img/android-08.png";
-import Android9 from "./assets/img/android-09.png";
-import Android10 from "./assets/img/android-10.png";
+import Android1 from "./assets/android-01.png";
+import Android2 from "./assets/android-02.png";
+import Android3 from "./assets/android-03.png";
+import Android4 from "./assets/android-04.png";
+import Android5 from "./assets/android-05.png";
+import Android6 from "./assets/android-06.png";
+import Android7 from "./assets/android-07.png";
+import Android8 from "./assets/android-08.png";
+import Android9 from "./assets/android-09.png";
+import Android10 from "./assets/android-10.png";
 
 # Android Integration Guide
 
