--- a/docs/mobile-sdk/integration-guide/ios-integration-guide.mdx
+++ b/docs/mobile-sdk/integration-guide/ios-integration-guide.mdx
@@ -5,19 +5,19 @@ id: mobile-sdk-integration-guide-ios
 
 import Tabs from "@theme/Tabs";
 import TabItem from "@theme/TabItem";
-import iOS3 from "./assets/img/iOS-3.png";
-import iOS4 from "./assets/img/iOS-4.png";
-import iOS7 from "./assets/img/iOS-7.png";
-import iOS11 from "./assets/img/iOS-11.png";
-import iOS12 from "./assets/img/iOS-12.png";
-import iOS14 from "./assets/img/iOS-14.png";
-import iOS17 from "./assets/img/iOS-17.png";
-import iOS15 from "./assets/img/iOS-15.png";
-import iOS18 from "./assets/img/iOS-18.png";
-import iOS20 from "./assets/img/iOS-20.png";
-import iOS21 from "./assets/img/iOS-21.png";
-import iOS19 from "./assets/img/iOS-19.png";
-import iOS22 from "./assets/img/ios-22.png"
+import iOS3 from "./assets/iOS-3.png";
+import iOS4 from "./assets/iOS-4.png";
+import iOS7 from "./assets/iOS-7.png";
+import iOS11 from "./assets/iOS-11.png";
+import iOS12 from "./assets/iOS-12.png";
+import iOS14 from "./assets/iOS-14.png";
+import iOS17 from "./assets/iOS-17.png";
+import iOS15 from "./assets/iOS-15.png";
+import iOS18 from "./assets/iOS-18.png";
+import iOS20 from "./assets/iOS-20.png";
+import iOS21 from "./assets/iOS-21.png";
+import iOS19 from "./assets/iOS-19.png";
+import iOS22 from "./assets/ios-22.png"
 
 
 # iOS Integration Guide
