--- a/docs/mobile-sdk/integration-guide/android-integration-guide.mdx
+++ b/docs/mobile-sdk/integration-guide/android-integration-guide.mdx
@@ -271,7 +271,7 @@ If you wish to obfuscate your application code, create or edit your `proguard-ru
 
 Deploying your Android application once integrated with the BlockID SDK does not require any additional steps to your deployment process.
 
-## Initial SDK Setup 
+## **Initial SDK Setup** 
 
 The BlockID SDK should now be fully added to your application at this point. 
 
