--- a/docs/mobile-sdk/integration-guide/android-integration-guide.mdx
+++ b/docs/mobile-sdk/integration-guide/android-integration-guide.mdx
@@ -120,8 +120,7 @@ The application must be compiled successfully
 
 ### Step 3: Java Compatibility
 
-:::
-caution
+:::caution
 The BlockID SDK is not binary compatible with applications that target Java 7
 :::
 
@@ -369,7 +368,7 @@ BlockIDSDK.getInstance().commitApplicationWallet();
 The commit wallet method is the final step for setting up BlockID SDK into an Android application.
 
 
-## SDK Security 
+## **SDK Security** 
 
 Because the attack surface of an API is wider than that of a standlone application. the BlockID SDK has implemented a locking mechanism to prevent any kind of unauthorized access. 
 
