added image to 3.1.1

--- a/docs/mobile-sdk/integration-guide/ios-integration-guide.mdx
+++ b/docs/mobile-sdk/integration-guide/ios-integration-guide.mdx
@@ -8,6 +8,7 @@ import TabItem from "@theme/TabItem";
 import iOS3 from "./assets/iOS-3.png";
 import iOS4 from "./assets/iOS-4.png";
 import iOS7 from "./assets/iOS-7.png";
+import iOS10 from "./assets/ios-10.png";
 import iOS11 from "./assets/iOS-11.png";
 import iOS12 from "./assets/iOS-12.png";
 import iOS14 from "./assets/iOS-14.png";
@@ -136,6 +137,15 @@ target 'BlockID Demo' do
     pod 'BlockIDSDK', :git => 'https://github.com/1KBlockID/ios-blockidsdk.git', :tag => '1.6.00'
 end
 ```
+
+<img src={iOS10} />
+
+
+:::note 
+The BlockID iOS SDK is currently not published in the  public Cocoapod Spec repository. Please use the manual installation method documented above
+:::
+
+
 
 ##### 3.1.2 Install BlockID SDK
 
