--- a/docs/webauthn/webauthn.mdx
+++ b/docs/webauthn/webauthn.mdx
@@ -17,7 +17,7 @@ import Mobilefido2 from "./assets/mobilefido2.png";
 :::tip
 **Please Note:**
 
-We've provided an <a href="/devportal/demo" target="_blank"> example application</a> where users can test webauthn functionality. Users can register a FIDO device, and then use that device to authenticate. 
+We've provided an <a href="/devportal/demo/?tab=fidowebauthn" target="_blank"> example application</a> where users can test webauthn functionality. Users can register a FIDO device, and then use that device to authenticate. 
 :::
 
 <br />
@@ -41,10 +41,11 @@ After registering an authenticator, users can their enrolled device to authentic
 
 ### Requirements
 
-- BlockID SDK - installed and initialized with license key and tenant information.
+- BlockID SDK for NodeJS - installed and initialized with license key and tenant information.
 - Compatible FIDO2 device - this can be a hardware key, such as a YubiKey, or a device with built-in biometrics, such as a mobile device.
 
-See [Getting Started](/docs#gettingstarted) for more information on installing and initializng the BlockID SDK.
+See [Getting Started](/docs#gettingstarted) for more information on installing and initializing the BlockID SDK for NodeJS. 
+
 
 
 
