--- a/docs/webauthn/webauthn-nodejs-invocation.mdx
+++ b/docs/webauthn/webauthn-nodejs-invocation.mdx
@@ -1,6 +1,6 @@
 ---
-slug: /webauthn/noejs-invocation
-id: nodejs-invocation
+slug: /webauthn/nodejs-invocation
+id: webauthn-nodejs-invocation
 ---
 
 import Tabs from "@theme/Tabs";
